<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.gdgcatania.android.app.gcmtest.MainActivity$PlaceholderFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_bg" >

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:hint="@string/str_username"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextUser"
            android:layout_alignRight="@+id/editTextUser"
            android:layout_below="@+id/editTextUser"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:hint="@string/str_pass"
            android:imeOptions="actionDone"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewAlreadyRegistred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonSend"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginTop="20dp"
            android:text="@string/str_alreadyreg"
            android:textColor="@color/allert"
            android:textColorHint="@color/allert"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextPassword"
            android:layout_alignRight="@+id/editTextPassword"
            android:layout_below="@+id/textViewAlreadyRegistred"
            android:layout_marginTop="41dp"
            android:text="@string/str_send" />

    </RelativeLayout>

</RelativeLayout>